# llm-reasoning-reliability-reproduction

./: .env.example  .gitignore  README.md
docs/: LCF_critical_analysis.md  LCF_implementation_spec.md  LCF_model_agnostic.md  LCF_reproduction_results.md  LCF_vicuna_independent.md  MASTER_PLAN.md  RPC_reproduction_results.md  sparkq_issues.md
lcf/: multimodel_results.txt  run_baselines.sh  run_caa.sh  run_eval_core.sh  run_lcf_full.sh  run_lcf_pipeline.sh  run_legal.sh  run_multimodel.sh
lcf/baselines/: README.md  iti.py  rahf.py  sft.py
lcf/data/: SCHEMA.md  conclusion_gen_val.jsonl  (+8 more)
lcf/eval/: discriminator.py  metrics.py  postprocess_judge.py  pyproject.toml  run_eval.py  smoke_judge.py
lcf/eval/fixtures/: conclusion_gen_test.jsonl  fallacy_id_test.jsonl
lcf/eval/results/: Qwen-Qwen3-8B_ITI.json  Qwen-Qwen3-8B_LCF.json  Qwen-Qwen3-8B_original.json  meta-llama-Llama-2-7b-chat-hf_LCF.json  meta-llama-Llama-2-7b-chat-hf_original.json  summary.csv
results/: caa_Llama-2-7b.txt  caa_Qwen3-8B.txt  caa_model_agnostic.txt  kcast_Llama-2-7b.txt  kcast_Qwen3-8B.txt  kcast_model_agnostic.txt  lcf_contrastive_sweep.txt  lcf_layer_probe.txt  lcf_legal_results.txt  lcf_multimodel_results.txt  lcf_v2_eval.txt  moodrisk_probe.txt  rpc_bird_K16.txt  rpc_bird_K32.txt  rpc_bird_K8.txt  rpc_bird_results.txt  rpc_grid_results.txt  rpc_kcc4_K16.txt  rpc_kcc4_K8.txt  rpc_kcc4_results.txt  rpc_mcq_results.txt  syllog_content_Llama-2-7b.txt  syllog_content_Qwen3-8B.txt  syllog_validity_Llama-2-7b.txt  syllog_validity_Qwen3-8B.txt
rpc/: _batched_gen.py
scripts/: run_full_repro.sh
(+98 files in other folders)
